@@ -44,6 +44,7 @@
     <Compile Include="TcpClientSink.cs" />
     <Compile Include="TcpClientChannel.cs" />
     <Compile Include="TcpClientSinkProvider.cs" />
+    <Compile Include="BufferedOutputStream.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
 </Project>
